@@ -4,7 +4,7 @@ import lombok.*;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
-import javax.persistence.Table;
+import javax.validation.constraints.NotBlank;
 
 /**
  * Employee object model (JPA entity).
@@ -12,24 +12,27 @@ import javax.persistence.Table;
  * @author Julian Quint
  */
 @Entity
-@Table
-@Getter
-@Setter
-@EqualsAndHashCode(callSuper = true)
+@Data
+@Builder
 @NoArgsConstructor
 @AllArgsConstructor
+@EqualsAndHashCode(callSuper = true)
 public class Employee extends BaseEntity {
-    @Column(name = "first_name", nullable = false)
+
+    @NotBlank
+    @Column(nullable = false)
     private String firstName;
 
-    @Column(name = "last_name", nullable = false)
+    @NotBlank
+    @Column(nullable = false)
     private String lastName;
 
+    @NotBlank
     @Column(nullable = false)
     private String position;
 
     @Override
     public String toString() {
-        return String.format("%s %s", firstName, lastName);
+        return "%s %s".formatted(firstName, lastName);
     }
 }
